# dicom-interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md
rti/base/: rti_aperture.hpp  rti_beam_module.hpp  rti_beam_module_ion.hpp  rti_beam_module_rt.hpp  rti_beamlet.hpp  rti_beamline.hpp  rti_beamsource.hpp  rti_common.hpp  rti_coordinate_transform.hpp  rti_ct.hpp  rti_dataset.hpp  rti_distributions.hpp  rti_dvf.hpp  rti_geometry.hpp  rti_matrix.hpp  rti_rangeshifter.hpp  rti_rect2d.hpp  rti_rect3d.hpp  rti_rtdose.hpp  rti_stopping_power.hpp  rti_stopping_power.icc  rti_track.hpp  rti_treatment_machine.hpp  rti_treatment_machine_ion.hpp  rti_treatment_machine_pbs.hpp  rti_treatment_session.hpp  rti_utils.hpp  rti_vec.hpp  rti_vertex.hpp
rti/base/distributions/: rti_const_1d.hpp  rti_norm_1d.hpp  rti_pdfMd.hpp  rti_phsp6d.hpp  rti_phsp6d_fanbeam.hpp  rti_uni_1d.hpp
rti/test/dicom/: generate_water_cube.py
rti/test/session/: CMakeLists.txt  cli_rti.hpp  hist.txt  pbs_generic.table  smc_linescan.cpp  smc_plan.txt  smc_scan_sequence.txt  treatment_session.cpp
rti/test/topas/: QA.txt  QA_tutorial.txt  beam.txt  beam_view.txt  plan.txt  plan_ch1.txt  plan_ch1_view.txt  view.txt
rti/test/topas/Abdomen/: README.txt
rti/topas/rtion/: TsRTIonComponents.cc  TsRTIonComponents.hh  TsRTIonSource.cc  TsRTIonSource.hh  TsRTIonSourceGenerator.cc  TsRTIonSourceGenerator.hh
rti/topas/tutorial/: .gitignore  QA_tutorial.txt  QA_view.txt  beam.txt  beam_view.txt  inputs.txt  plan.txt  plan_hu.txt  plan_hu_view.txt  plan_tutorial.txt  view.txt
rti/topas/tutorial/Abdomen/: rtdose.dcm
rti/treatment_machines/rbe/: rbe1p1.table  rbe_1p1.hpp  rbe_1p1_complete.hpp  rtip_demo.dcm
rti/treatment_machines/smc/: rti_treatment_machine_smc_g2.hpp
